--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdkVersion 24
     buildToolsVersion "25.0.1"
     defaultConfig {
-        applicationId "org.jasoet.android.favoritetoys"
+        applicationId "org.jasoet.android.sunshine"
         minSdkVersion 23
         targetSdkVersion 24
         versionCode 1
